--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build":"npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
   },
+  "content": [
+    "./src/**/*.{html,js}",
+    "./index.html"
+  ],
   "keywords": [],
   "author": "",
   "license": "ISC",
